--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <HTML dir='ltr' lang='en-US'>
   <head>
     <meta content='width=device-width,minimum-scale=1,initial-scale=1' name='viewport'/>
+    <meta http-equiv="content-type" content="text/plain" />
     <meta charset='utf-8'/>
     <title>Related Post</title>
     <style>
